--- a/app/src/main/res/layout/activity_registration_screen.xml
+++ b/app/src/main/res/layout/activity_registration_screen.xml
@@ -25,6 +25,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:id="@+id/fname_txt"
+        android:inputType="textCapWords"
         android:layout_alignBaseline="@+id/fname_lbl"
         android:layout_toRightOf="@+id/fname_lbl"
         android:layout_toEndOf="@+id/fname_lbl" />
@@ -45,6 +46,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:id="@+id/lname_txt"
+        android:inputType="textCapWords"
         android:layout_alignBaseline="@+id/lname_lbl"
         android:layout_toRightOf="@+id/lname_lbl"
         android:layout_toEndOf="@+id/lname_lbl" />
